# pre-commit-hooks-django

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
hooks/: check_untracked_migrations.py  po_location_format.py  utils.py
pre_commit_hooks/: check_untracked_migrations.py
tests/: check_untracked_migrations_test.py  conftest.py  po_location_format_test.py
